Fix path for tf config

--- a/terraform/provision_resources/buildspec.yml
+++ b/terraform/provision_resources/buildspec.yml
@@ -23,6 +23,7 @@ phases:
 
   pre_build:
     commands:
+      - cd terraform/provision_resources
       - echo "Executing terraform init..."
       - terraform init
 
