--- a/terraform/provision_resources/buildspec.yml
+++ b/terraform/provision_resources/buildspec.yml
@@ -10,24 +10,20 @@ phases:
       python: 3.9
     commands:
       - echo "Updating system packages..."
+      - set -e # Exit immediately if a command exits with a non-zero status
       - apt-get update -y
       - apt-get install -y curl unzip
       - echo "Installing Terraform version ${TERRAFORM_VERSION}..."
-      - cd /tmp
-      - curl -O https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
-      - unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
-      - chmod +x terraform
-      - mv terraform /usr/local/bin/
+      - curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+      - echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+      - sudo apt update && sudo apt install terraform -y
       - terraform --version
       - echo "Terraform installation completed."
 
   pre_build:
     commands:
       - echo "Finding the Terraform directory..."
-      - export TERRAFORM_DIR=$(find /codebuild/output -type d -name "provision_resources" | head -n 1)
-      - if [ -z "$TERRAFORM_DIR" ]; then echo "Terraform directory not found! Exiting..."; exit 1; fi
-      - echo "Terraform directory found: $TERRAFORM_DIR"
-      - cd $TERRAFORM_DIR
+      - cd terraform/provision_resources
       - ls -la
       - echo "Executing terraform init..."
       - terraform init
