--- a/terraform/provision_resources/buildspec.yml
+++ b/terraform/provision_resources/buildspec.yml
@@ -10,20 +10,21 @@ phases:
       python: 3.9
     commands:
       - echo "Updating system packages..."
+      - set -e # Exit immediately if a command exits with a non-zero status
       - apt-get update -y
       - apt-get install -y curl unzip
       - echo "Installing Terraform version ${TERRAFORM_VERSION}..."
-      - cd /tmp
-      - curl -O https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
-      - unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
-      - chmod +x terraform
-      - mv terraform /usr/local/bin/
+      - curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
+      - echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
+      - sudo apt update && sudo apt install terraform -y
       - terraform --version
       - echo "Terraform installation completed."
 
   pre_build:
     commands:
+      - echo "Finding the Terraform directory..."
       - cd terraform/provision_resources
+      - ls -la
       - echo "Executing terraform init..."
       - terraform init
 
@@ -34,7 +35,7 @@ phases:
       - echo "Executing terraform apply..."
       - terraform apply -auto-approve
       - echo "Terraform apply completed. Waiting for 10 minutes before destroy..."
-      - sleep 600 # Wait for 10 minutes (600 seconds)
+      - sleep 300
 
   post_build:
     commands:
